// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
      rel="stylesheet"
    />
    <title>Zintl | Vanilla SPA Example</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        let currentLocale = params.get("lang") || "en";
        const l = currentLocale || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"زينتل | مثال تطبيق الصفحة الواحدة"},"es":{"title":"Zintl | Ejemplo de SPA Vanilla"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/src/components/Header.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main_f_836 from "virtual:zintl/manager/none/entry:b_src_main_f_836";
// import { zintl } from "zintl/macro";

export async function Header(currentLocale: string) {
  // Establishing an independent anchor for the header
  // await zintl(currentLocale);

  const container = document.createElement("header");
  container.className = "app-header";

  container.innerHTML = \`
    <nav class="navbar">
      <div class="nav-brand">
        <span class="brand-text">\${_t("Zintl", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_components_Header_Header" })}</span>
      </div>
      <div class="nav-links">
        <a href="/" class="nav-link">\${_t("Home", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_components_Header_Header" })}</a>
        <a href="/about" class="nav-link">\${_t("About", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_components_Header_Header" })}</a>
      </div>
      <!-- @zintl-ignore -->
      <div class="locale-switcher">
        <button data-locale="en" class="lang-btn \${currentLocale === "en" ? "active" : ""}">English</button>
        <button data-locale="ar" class="lang-btn \${currentLocale === "ar" ? "active" : ""}">العربية</button>
        <button data-locale="es" class="lang-btn \${currentLocale === "es" ? "active" : ""}">Español</button>
      </div>
    </nav>
  \`;

  // Use event delegation for locale switching
  container.addEventListener("click", (e) => {
    const target = e.target as HTMLElement;
    if (target.classList.contains("lang-btn")) {
      const locale = target.dataset.locale;
      if (locale) {
        window.dispatchEvent(new CustomEvent("locale-change", { detail: locale }));
      }
    }

    if (target.classList.contains("nav-link")) {
      e.preventDefault();
      const path = target.getAttribute("href");
      if (path) {
        window.dispatchEvent(new CustomEvent("navigate", { detail: path }));
      }
    }
  });

  return container;
}"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/src/main.ts 1`] = `
"import { loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main_f_836 from "virtual:zintl/manager/none/entry:b_src_main_f_836";
import "./style.css";
import { Router } from "./router";
import { Header } from "./components/Header";
import { Home } from "./pages/Home";


async function initApp() {
  const params = new URLSearchParams(window.location.search);
  let currentLocale = params.get("lang") || "en";
  // await zintl(currentLocale);

  const appRoot = document.querySelector<HTMLDivElement>("#app")!;
  const headerContainer = document.createElement("div");
  const contentContainer = document.createElement("main");

  appRoot.innerHTML = "";
  appRoot.appendChild(headerContainer);
  appRoot.appendChild(contentContainer);

  const router = new Router(contentContainer);

  const updateApp = async (locale: string) => {
    currentLocale = locale;

    // Hydrate the app with the new locale's translations
    await (globalThis.__zintl_inst = loadI18nInstance({ locale: currentLocale, loaders: { ["b_src_main_f_836"]: _zintl_mgr_b_src_main_f_836.loader, ["b_src_pages_About_About"]: _zintl_mgr_b_src_main_f_836.loader } }));

    // Update Header
    headerContainer.innerHTML = "";
    headerContainer.appendChild(await Header(currentLocale));

    // Update Router
    void router.init();
  };

  router.addRoute("/", () => Home());
  router.addRoute("/about", async () => {
    const { About } = await import("./pages/About");
    return About();
  });

  // Global listeners
  window.addEventListener("locale-change", (e: any) => {
    const newLocale = e.detail;
    const url = new URL(window.location.href);
    url.searchParams.set("lang", newLocale);
    window.history.pushState({}, "", url);
    void updateApp(newLocale);
  });

  window.addEventListener("navigate", (e: any) => {
    void router.navigate(e.detail);
  });

  window.addEventListener("popstate", () => {
    const params = new URLSearchParams(window.location.search);
    const newLocale = params.get("lang") || "en";
    if (newLocale !== currentLocale) {
      void updateApp(newLocale);
    }
  });

  // Initial render
  await updateApp(currentLocale);
}

void initApp();


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/main");
  });
}"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/src/pages/About.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main_f_836 from "virtual:zintl/manager/none/entry:b_src_main_f_836";
export function About() {
  const container = document.createElement("div");
  container.className = "page about-page";

  container.innerHTML = \`
    <section class="about-content">
      <h2 class="section-title">\${_t("About Zintl", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_About_About" })}</h2>
      <p>
        \${_t("Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_About_About" })}
      </p>
      
      <div class="mission-statement">
        <blockquote>
          \${_t("\\"Our mission is to make internationalization as seamless as writing your UI code.\\"", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_About_About" })}
        </blockquote>
      </div>

      <div class="team-section">
        <h3>\${_t("The Philosophy", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_About_About" })}</h3>
        <p>
          \${_t("We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences.", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_About_About" })}
        </p>
      </div>
    </section>
  \`;

  return container;
}"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/src/pages/Home.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main_f_836 from "virtual:zintl/manager/none/entry:b_src_main_f_836";
// import { zintl } from "zintl/macro";
import heroImg from "../assets/hero.png";

export async function Home() {
  // Independent anchor for the Home page
  // await zintl(currentLocale);

  const container = document.createElement("div");
  container.className = "page home-page";

  container.innerHTML = \`
    <section class="hero">
      <div class="hero-content">
        <h1 class="hero-title">\${_t("Powerful I18n for Modern Apps", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</h1>
        <p class="hero-subtitle">
          \${_t("Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}
        </p>
        <div class="hero-cta">
          <button class="btn btn-primary">\${_t("Get Started", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</button>
          <button class="btn btn-secondary">\${_t("Learn More", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</button>
        </div>
      </div>
      <div class="hero-visual">
        <img src="\${heroImg}" alt="Zintl Visualization" class="hero-image" />
      </div>
    </section>

    <section class="features">
      <div class="feature-card">
        <!-- @zintl-note This is a note for Zero Config -->
        <h3>\${_t("Zero Config", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</h3>
        <!-- @zintl-pass x=1 -->
        <p>\${_t("Just call zintl() and let the compiler do the rest of the heavy lifting for you.", { x: 1 }, { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</p>
      </div>
      <div class="feature-card">
        <h3>\${_t("Type Safe", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</h3>
        <p>\${_t("Enjoy full TypeScript support with automatically generated translation schemas.", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</p>
      </div>
      <div class="feature-card">
        <h3>\${_t("Optimized", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</h3>
        <p>\${_t("Only load what you need, when you need it. Smallest runtime footprint in the industry.", { _mgr: _zintl_mgr_b_src_main_f_836, _bId: "b_src_pages_Home_Home" })}</p>
      </div>
    </section>
  \`;

  return container;
}"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/src/router.ts 1`] = `
"type Route = {
  path: string;
  component: () => string | HTMLElement | Promise<string | HTMLElement>;
};

export class Router {
  private routes: Route[] = [];
  private rootElement: HTMLElement;

  constructor(rootElement: HTMLElement) {
    this.rootElement = rootElement;
    window.addEventListener("popstate", () => this.handleRoute());
  }

  addRoute(path: string, component: () => string | HTMLElement | Promise<string | HTMLElement>) {
    this.routes.push({ path, component });
  }

  async navigate(path: string) {
    const url = new URL(path, window.location.origin);
    const currentParams = new URLSearchParams(window.location.search);
    const lang = currentParams.get("lang");

    if (lang && !url.searchParams.has("lang")) {
      url.searchParams.set("lang", lang);
    }

    window.history.pushState({}, "", url.pathname + url.search + url.hash);
    await this.handleRoute();
  }

  private async handleRoute() {
    const path = window.location.pathname;
    const route = this.routes.find((r) => r.path === path) || this.routes[0];
    if (route) {
      const content = await route.component();
      if (typeof content === "string") {
        this.rootElement.innerHTML = content;
      } else {
        this.rootElement.innerHTML = "";
        this.rootElement.appendChild(content);
      }
    }
  }

  async init() {
    await this.handleRoute();
  }
}"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/virtual:zintl/content/ar/entry:b_src_main_f_836 1`] = `
"export default {
    "b_src_components_Header_Header": {
      "Zintl": "زينتل",
      "Home": "الرئيسية",
      "About": "من نحن",
    },
    "b_src_pages_Home_Home": {
      "Powerful I18n for Modern Apps": "تدويل قوي للتطبيقات الحديثة",
      "Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!": "يقوم زينتل بتحويل سلاسل النصوص الثابتة إلى كتالوجات ترجمة محسنة وواعية بالقطع.\\n          استمتع بمستقبل التدويل اليوم!",
      "Get Started": "ابدأ الآن",
      "Learn More": "تعلم المزيد",
      "Zero Config": "بدون إعدادات",
      "Just call zintl() and let the compiler do the rest of the heavy lifting for you.": "فقط قم باستدعاء zintl() واترك المترجم يقوم بالباقي من أجلك.",
      "Type Safe": "آمن من حيث الأنواع",
      "Enjoy full TypeScript support with automatically generated translation schemas.": "استمتع بدعم TypeScript الكامل مع مخططات ترجمة منشأة تلقائياً.",
      "Optimized": "محسن",
      "Only load what you need, when you need it. Smallest runtime footprint in the industry.": "قم بتحميل ما تحتاجه فقط، عند الحاجة إليه. أصغر أثر في الذاكرة في هذا المجال.",
    },
    "b_src_pages_About_About": {
      "About Zintl": "عن زينتل",
      "Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.": "وُلِد زينتل من الحاجة إلى طريقة أكثر صداقة للمطورين للتعامل مع الترجمات في تطبيقات الويب المعقدة.\\n        غالبًا ما تتطلب أنظمة التدويل التقليدية إدارة يدوية لملفات JSON وأكواد نمطية معقدة.",
      "\\"Our mission is to make internationalization as seamless as writing your UI code.\\"": "\\"مهمتنا هي جعل التدويل سلسًا مثل كتابة كود واجهة المستخدم الخاصة بك.\\"",
      "The Philosophy": "الفلسفة",
      "We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences.": "نحن نؤمن بأن المترجم يجب أن يكون أفضل صديق لك. من خلال تحليل كود المصدر الخاص بك،\\n          يمكن لـ زينتل أتمتة استخراج وربط وتحسين ترجماتك،\\n          مما يترك لك الحرية للتركيز على بناء تجارب مستخدم مذهلة.",
    },
  };
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/virtual:zintl/content/es/entry:b_src_main_f_836 1`] = `
"export default {
    "b_src_components_Header_Header": {
      "Zintl": "Zintl",
      "Home": "Inicio",
      "About": "Sobre nosotros",
    },
    "b_src_pages_Home_Home": {
      "Powerful I18n for Modern Apps": "I18n potente para aplicaciones modernas",
      "Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!": "Zintl transforma sus cadenas estáticas en catálogos de traducción optimizados y conscientes de los fragmentos.\\n          ¡Experimente el futuro de la internacionalización hoy mismo!",
      "Get Started": "Empezar",
      "Learn More": "Saber más",
      "Zero Config": "Cero configuración",
      "Just call zintl() and let the compiler do the rest of the heavy lifting for you.": "Solo llame a zintl() y deje que el compilador haga el resto del trabajo pesado por usted.",
      "Type Safe": "Seguridad de tipos",
      "Enjoy full TypeScript support with automatically generated translation schemas.": "Disfrute de soporte completo de TypeScript con esquemas de traducción generados automáticamente.",
      "Optimized": "Optimizado",
      "Only load what you need, when you need it. Smallest runtime footprint in the industry.": "Cargue solo lo que necesite, cuando lo necesite. La huella de tiempo de ejecución más pequeña de la industria.",
    },
    "b_src_pages_About_About": {
      "About Zintl": "Sobre Zintl",
      "Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.": "Zintl nació de la necesidad de una forma más amigable para el desarrollador de manejar traducciones en aplicaciones web complejas.\\n        Los sistemas i18n tradicionales a menudo requieren la gestión manual de archivos JSON y código repetitivo complejo.",
      "\\"Our mission is to make internationalization as seamless as writing your UI code.\\"": "\\"Nuestra misión es hacer que la internacionalización sea tan fluida como escribir el código de su interfaz de usuario.\\"",
      "The Philosophy": "La filosofía",
      "We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences.": "Creemos que el compilador debe ser su mejor amigo. Al analizar su código fuente,\\n          Zintl puede automatizar la extracción, el cosido y la optimización de sus traducciones,\\n          dejándole libre para centrarse en crear experiencias de usuario increíbles.",
    },
  };
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/virtual:zintl/manager/none/entry:b_src_main_f_836 1`] = `
"export default { id: "b_src_main_f_836", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_components_Header_Header": {
      "Zintl": "Zintl",
      "Home": "Home",
      "About": "About",
    },
    "b_src_pages_Home_Home": {
      "Powerful I18n for Modern Apps": "Powerful I18n for Modern Apps",
      "Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!": "Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!",
      "Get Started": "Get Started",
      "Learn More": "Learn More",
      "Zero Config": "Zero Config",
      "Just call zintl() and let the compiler do the rest of the heavy lifting for you.": "Just call zintl() and let the compiler do the rest of the heavy lifting for you.",
      "Type Safe": "Type Safe",
      "Enjoy full TypeScript support with automatically generated translation schemas.": "Enjoy full TypeScript support with automatically generated translation schemas.",
      "Optimized": "Optimized",
      "Only load what you need, when you need it. Smallest runtime footprint in the industry.": "Only load what you need, when you need it. Smallest runtime footprint in the industry.",
    },
    "b_src_pages_About_About": {
      "About Zintl": "About Zintl",
      "Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.": "Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.",
      "\\"Our mission is to make internationalization as seamless as writing your UI code.\\"": "\\"Our mission is to make internationalization as seamless as writing your UI code.\\"",
      "The Philosophy": "The Philosophy",
      "We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences.": "We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences.",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_main_f_836").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_main_f_836").then(m => m.default);
        default: return {};
      }
    } };
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vanilla-spa > should match Development snapshots (Identity keys) > vanilla-spa/dev-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	const message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) {
		if (mgr) {
			instance.registerLoader(mgr.id, mgr.loader);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;

exports[`Example Proof: vanilla-spa > should match Final Production Build (dist) snapshots > vanilla-spa/dist/assets/About.js 1`] = `
"import { n as _t, t as entry_b_612e1169e238_default } from "./index.js";
//#region examples/vanilla-spa/src/pages/About.ts
function About() {
	const container = document.createElement("div");
	container.className = "page about-page";
	container.innerHTML = \`
    <section class="about-content">
      <h2 class="section-title">\${_t("0c4eede9", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_41f76352d384"
	})}</h2>
      <p>
        \${_t("cdc3f7c6", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_41f76352d384"
	})}
      </p>
      
      <div class="mission-statement">
        <blockquote>
          \${_t("cab0f0a8", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_41f76352d384"
	})}
        </blockquote>
      </div>

      <div class="team-section">
        <h3>\${_t("20a173f4", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_41f76352d384"
	})}</h3>
        <p>
          \${_t("c8ba9e8e", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_41f76352d384"
	})}
        </p>
      </div>
    </section>
  \`;
	return container;
}
//#endregion
export { About };
"
`;

exports[`Example Proof: vanilla-spa > should match Final Production Build (dist) snapshots > vanilla-spa/dist/assets/entry_b_612e1169e238.js 1`] = `
"//#region \\0virtual:zintl/content/ar/entry:b_612e1169e238
var entry_b_612e1169e238_default = {
	"b_e7c8b4f1ad96": {
		"dedf795b": "زينتل",
		"70f8bb9a": "الرئيسية",
		"6b21fb79": "من نحن"
	},
	"b_16245bf9a205": {
		"da2c5899": "تدويل قوي للتطبيقات الحديثة",
		"d77d2ed7": "يقوم زينتل بتحويل سلاسل النصوص الثابتة إلى كتالوجات ترجمة محسنة وواعية بالقطع.\\n          استمتع بمستقبل التدويل اليوم!",
		"bd2cb051": "ابدأ الآن",
		"378cbbf5": "تعلم المزيد",
		"29eaa4f9": "بدون إعدادات",
		"e8d55846": "فقط قم باستدعاء zintl() واترك المترجم يقوم بالباقي من أجلك.",
		"eb4a6c12": "آمن من حيث الأنواع",
		"7548843e": "استمتع بدعم TypeScript الكامل مع مخططات ترجمة منشأة تلقائياً.",
		"5e115f01": "محسن",
		"0ff9c8a8": "قم بتحميل ما تحتاجه فقط، عند الحاجة إليه. أصغر أثر في الذاكرة في هذا المجال."
	},
	"b_41f76352d384": {
		"0c4eede9": "عن زينتل",
		"cdc3f7c6": "وُلِد زينتل من الحاجة إلى طريقة أكثر صداقة للمطورين للتعامل مع الترجمات في تطبيقات الويب المعقدة.\\n        غالبًا ما تتطلب أنظمة التدويل التقليدية إدارة يدوية لملفات JSON وأكواد نمطية معقدة.",
		"cab0f0a8": "\\"مهمتنا هي جعل التدويل سلسًا مثل كتابة كود واجهة المستخدم الخاصة بك.\\"",
		"20a173f4": "الفلسفة",
		"c8ba9e8e": "نحن نؤمن بأن المترجم يجب أن يكون أفضل صديق لك. من خلال تحليل كود المصدر الخاص بك،\\n          يمكن لـ زينتل أتمتة استخراج وربط وتحسين ترجماتك،\\n          مما يترك لك الحرية للتركيز على بناء تجارب مستخدم مذهلة."
	}
};
//#endregion
export { entry_b_612e1169e238_default as default };
"
`;

exports[`Example Proof: vanilla-spa > should match Final Production Build (dist) snapshots > vanilla-spa/dist/assets/entry_b_612e1169e2382.js 1`] = `
"//#region \\0virtual:zintl/content/es/entry:b_612e1169e238
var entry_b_612e1169e238_default = {
	"b_e7c8b4f1ad96": {
		"dedf795b": "Zintl",
		"70f8bb9a": "Inicio",
		"6b21fb79": "Sobre nosotros"
	},
	"b_16245bf9a205": {
		"da2c5899": "I18n potente para aplicaciones modernas",
		"d77d2ed7": "Zintl transforma sus cadenas estáticas en catálogos de traducción optimizados y conscientes de los fragmentos.\\n          ¡Experimente el futuro de la internacionalización hoy mismo!",
		"bd2cb051": "Empezar",
		"378cbbf5": "Saber más",
		"29eaa4f9": "Cero configuración",
		"e8d55846": "Solo llame a zintl() y deje que el compilador haga el resto del trabajo pesado por usted.",
		"eb4a6c12": "Seguridad de tipos",
		"7548843e": "Disfrute de soporte completo de TypeScript con esquemas de traducción generados automáticamente.",
		"5e115f01": "Optimizado",
		"0ff9c8a8": "Cargue solo lo que necesite, cuando lo necesite. La huella de tiempo de ejecución más pequeña de la industria."
	},
	"b_41f76352d384": {
		"0c4eede9": "Sobre Zintl",
		"cdc3f7c6": "Zintl nació de la necesidad de una forma más amigable para el desarrollador de manejar traducciones en aplicaciones web complejas.\\n        Los sistemas i18n tradicionales a menudo requieren la gestión manual de archivos JSON y código repetitivo complejo.",
		"cab0f0a8": "\\"Nuestra misión es hacer que la internacionalización sea tan fluida como escribir el código de su interfaz de usuario.\\"",
		"20a173f4": "La filosofía",
		"c8ba9e8e": "Creemos que el compilador debe ser su mejor amigo. Al analizar su código fuente,\\n          Zintl puede automatizar la extracción, el cosido y la optimización de sus traducciones,\\n          dejándole libre para centrarse en crear experiencias de usuario increíbles."
	}
};
//#endregion
export { entry_b_612e1169e238_default as default };
"
`;

exports[`Example Proof: vanilla-spa > should match Final Production Build (dist) snapshots > vanilla-spa/dist/assets/index.js 1`] = `
"//#region \\0vite/modulepreload-polyfill.js
(function polyfill() {
	const relList = document.createElement("link").relList;
	if (relList && relList.supports && relList.supports("modulepreload")) return;
	for (const link of document.querySelectorAll("link[rel=\\"modulepreload\\"]")) processPreload(link);
	new MutationObserver((mutations) => {
		for (const mutation of mutations) {
			if (mutation.type !== "childList") continue;
			for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
		}
	}).observe(document, {
		childList: true,
		subtree: true
	});
	function getFetchOpts(link) {
		const fetchOpts = {};
		if (link.integrity) fetchOpts.integrity = link.integrity;
		if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
		if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
		else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
		else fetchOpts.credentials = "same-origin";
		return fetchOpts;
	}
	function processPreload(link) {
		if (link.ep) return;
		link.ep = true;
		const fetchOpts = getFetchOpts(link);
		fetch(link.href, fetchOpts);
	}
})();
//#endregion
//#region \\0virtual:zintl/runtime/internal
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && {}.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale);
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) this.notify();
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			this.notify();
		} else this.notify();
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
var globalRegistry = /* @__PURE__ */ new Map();
var currentInstance = new I18nStore();
function getActiveInstance() {
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {}
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	const message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) {
		if (mgr) {
			instance.registerLoader(mgr.id, mgr.loader);
			return \`\`;
		}
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
//#region \\0vite/preload-helper.js
var scriptRel = "modulepreload";
var assetsURL = function(dep) {
	return "/" + dep;
};
var seen = {};
var __vitePreload = function preload(baseModule, deps, importerUrl) {
	let promise = Promise.resolve();
	if (deps && deps.length > 0) {
		const links = document.getElementsByTagName("link");
		const cspNonceMeta = document.querySelector("meta[property=csp-nonce]");
		const cspNonce = cspNonceMeta?.nonce || cspNonceMeta?.getAttribute("nonce");
		function allSettled(promises) {
			return Promise.all(promises.map((p) => Promise.resolve(p).then((value) => ({
				status: "fulfilled",
				value
			}), (reason) => ({
				status: "rejected",
				reason
			}))));
		}
		promise = allSettled(deps.map((dep) => {
			dep = assetsURL(dep, importerUrl);
			if (dep in seen) return;
			seen[dep] = true;
			const isCss = dep.endsWith(".css");
			const cssSelector = isCss ? "[rel=\\"stylesheet\\"]" : "";
			if (!!importerUrl) for (let i = links.length - 1; i >= 0; i--) {
				const link = links[i];
				if (link.href === dep && (!isCss || link.rel === "stylesheet")) return;
			}
			else if (document.querySelector(\`link[href="\${dep}"]\${cssSelector}\`)) return;
			const link = document.createElement("link");
			link.rel = isCss ? "stylesheet" : scriptRel;
			if (!isCss) link.as = "script";
			link.crossOrigin = "";
			link.href = dep;
			if (cspNonce) link.setAttribute("nonce", cspNonce);
			document.head.appendChild(link);
			if (isCss) return new Promise((res, rej) => {
				link.addEventListener("load", res);
				link.addEventListener("error", () => rej(/* @__PURE__ */ new Error(\`Unable to preload CSS for \${dep}\`)));
			});
		}));
	}
	function handlePreloadError(err) {
		const e = new Event("vite:preloadError", { cancelable: true });
		e.payload = err;
		window.dispatchEvent(e);
		if (!e.defaultPrevented) throw err;
	}
	return promise.then((res) => {
		for (const item of res || []) {
			if (item.status !== "rejected") continue;
			handlePreloadError(item.reason);
		}
		return baseModule().catch(handlePreloadError);
	});
};
//#endregion
//#region \\0virtual:zintl/manager/none/entry:b_612e1169e238
var entry_b_612e1169e238_default = {
	id: "b_612e1169e238",
	loader: (locale) => {
		switch (locale) {
			case "en": return {
				"b_e7c8b4f1ad96": {
					"dedf795b": "Zintl",
					"70f8bb9a": "Home",
					"6b21fb79": "About"
				},
				"b_16245bf9a205": {
					"da2c5899": "Powerful I18n for Modern Apps",
					"d77d2ed7": "Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!",
					"bd2cb051": "Get Started",
					"378cbbf5": "Learn More",
					"29eaa4f9": "Zero Config",
					"e8d55846": "Just call zintl() and let the compiler do the rest of the heavy lifting for you.",
					"eb4a6c12": "Type Safe",
					"7548843e": "Enjoy full TypeScript support with automatically generated translation schemas.",
					"5e115f01": "Optimized",
					"0ff9c8a8": "Only load what you need, when you need it. Smallest runtime footprint in the industry."
				},
				"b_41f76352d384": {
					"0c4eede9": "About Zintl",
					"cdc3f7c6": "Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.",
					"cab0f0a8": "\\"Our mission is to make internationalization as seamless as writing your UI code.\\"",
					"20a173f4": "The Philosophy",
					"c8ba9e8e": "We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences."
				}
			};
			case "ar": return __vitePreload(() => import("./entry_b_612e1169e238.js").then((m) => m.default), []);
			case "es": return __vitePreload(() => import("./entry_b_612e1169e2382.js").then((m) => m.default), []);
			default: return {};
		}
	}
};
//#endregion
//#region examples/vanilla-spa/src/router.ts
var Router = class {
	routes = [];
	rootElement;
	constructor(rootElement) {
		this.rootElement = rootElement;
		window.addEventListener("popstate", () => this.handleRoute());
	}
	addRoute(path, component) {
		this.routes.push({
			path,
			component
		});
	}
	async navigate(path) {
		const url = new URL(path, window.location.origin);
		const lang = new URLSearchParams(window.location.search).get("lang");
		if (lang && !url.searchParams.has("lang")) url.searchParams.set("lang", lang);
		window.history.pushState({}, "", url.pathname + url.search + url.hash);
		await this.handleRoute();
	}
	async handleRoute() {
		const path = window.location.pathname;
		const route = this.routes.find((r) => r.path === path) || this.routes[0];
		if (route) {
			const content = await route.component();
			if (typeof content === "string") this.rootElement.innerHTML = content;
			else {
				this.rootElement.innerHTML = "";
				this.rootElement.appendChild(content);
			}
		}
	}
	async init() {
		await this.handleRoute();
	}
};
//#endregion
//#region examples/vanilla-spa/src/components/Header.ts
async function Header(currentLocale) {
	const container = document.createElement("header");
	container.className = "app-header";
	container.innerHTML = \`
    <nav class="navbar">
      <div class="nav-brand">
        <span class="brand-text">\${_t("dedf795b", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_e7c8b4f1ad96"
	})}</span>
      </div>
      <div class="nav-links">
        <a href="/" class="nav-link">\${_t("70f8bb9a", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_e7c8b4f1ad96"
	})}</a>
        <a href="/about" class="nav-link">\${_t("6b21fb79", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_e7c8b4f1ad96"
	})}</a>
      </div>
      <!-- @zintl-ignore -->
      <div class="locale-switcher">
        <button data-locale="en" class="lang-btn \${currentLocale === "en" ? "active" : ""}">English</button>
        <button data-locale="ar" class="lang-btn \${currentLocale === "ar" ? "active" : ""}">العربية</button>
        <button data-locale="es" class="lang-btn \${currentLocale === "es" ? "active" : ""}">Español</button>
      </div>
    </nav>
  \`;
	container.addEventListener("click", (e) => {
		const target = e.target;
		if (target.classList.contains("lang-btn")) {
			const locale = target.dataset.locale;
			if (locale) window.dispatchEvent(new CustomEvent("locale-change", { detail: locale }));
		}
		if (target.classList.contains("nav-link")) {
			e.preventDefault();
			const path = target.getAttribute("href");
			if (path) window.dispatchEvent(new CustomEvent("navigate", { detail: path }));
		}
	});
	return container;
}
//#endregion
//#region examples/vanilla-spa/src/assets/hero.png
var hero_default = "/assets/hero-5sT3BiRD.png";
//#endregion
//#region examples/vanilla-spa/src/pages/Home.ts
async function Home() {
	const container = document.createElement("div");
	container.className = "page home-page";
	container.innerHTML = \`
    <section class="hero">
      <div class="hero-content">
        <h1 class="hero-title">\${_t("da2c5899", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</h1>
        <p class="hero-subtitle">
          \${_t("d77d2ed7", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}
        </p>
        <div class="hero-cta">
          <button class="btn btn-primary">\${_t("bd2cb051", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</button>
          <button class="btn btn-secondary">\${_t("378cbbf5", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</button>
        </div>
      </div>
      <div class="hero-visual">
        <img src="\${hero_default}" alt="Zintl Visualization" class="hero-image" />
      </div>
    </section>

    <section class="features">
      <div class="feature-card">
        <!-- @zintl-note This is a note for Zero Config -->
        <h3>\${_t("29eaa4f9", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</h3>
        <!-- @zintl-pass x=1 -->
        <p>\${_t("e8d55846", { x: 1 }, {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</p>
      </div>
      <div class="feature-card">
        <h3>\${_t("eb4a6c12", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</h3>
        <p>\${_t("7548843e", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</p>
      </div>
      <div class="feature-card">
        <h3>\${_t("5e115f01", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</h3>
        <p>\${_t("0ff9c8a8", {
		_mgr: entry_b_612e1169e238_default,
		_bId: "b_16245bf9a205"
	})}</p>
      </div>
    </section>
  \`;
	return container;
}
//#endregion
//#region examples/vanilla-spa/src/main.ts
async function initApp() {
	let currentLocale = new URLSearchParams(window.location.search).get("lang") || "en";
	const appRoot = document.querySelector("#app");
	const headerContainer = document.createElement("div");
	const contentContainer = document.createElement("main");
	appRoot.innerHTML = "";
	appRoot.appendChild(headerContainer);
	appRoot.appendChild(contentContainer);
	const router = new Router(contentContainer);
	const updateApp = async (locale) => {
		currentLocale = locale;
		await (globalThis.__zintl_inst = loadI18nInstance({
			locale: currentLocale,
			loaders: {
				["b_612e1169e238"]: entry_b_612e1169e238_default.loader,
				["b_41f76352d384"]: entry_b_612e1169e238_default.loader
			}
		}));
		headerContainer.innerHTML = "";
		headerContainer.appendChild(await Header(currentLocale));
		router.init();
	};
	router.addRoute("/", () => Home());
	router.addRoute("/about", async () => {
		const { About } = await __vitePreload(async () => {
			const { About } = await import("./About.js");
			return { About };
		}, []);
		return About();
	});
	window.addEventListener("locale-change", (e) => {
		const newLocale = e.detail;
		const url = new URL(window.location.href);
		url.searchParams.set("lang", newLocale);
		window.history.pushState({}, "", url);
		updateApp(newLocale);
	});
	window.addEventListener("navigate", (e) => {
		router.navigate(e.detail);
	});
	window.addEventListener("popstate", () => {
		const newLocale = new URLSearchParams(window.location.search).get("lang") || "en";
		if (newLocale !== currentLocale) updateApp(newLocale);
	});
	await updateApp(currentLocale);
}
initApp();
//#endregion
export { _t as n, entry_b_612e1169e238_default as t };
"
`;

exports[`Example Proof: vanilla-spa > should match Final Production Build (dist) snapshots > vanilla-spa/dist/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
      rel="stylesheet"
    />
    <title>Zintl | Vanilla SPA Example</title>
    <script type="module" crossorigin src="/assets/index.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-C6gV1h4h.css">
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        let currentLocale = params.get("lang") || "en";
        const l = currentLocale || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"زينتل | مثال تطبيق الصفحة الواحدة"},"es":{"title":"Zintl | Ejemplo de SPA Vanilla"}};
        const originals = {
          title: document.title,
        };
        const preloads = {"ar":["assets/entry_b_612e1169e238.js"],"es":["assets/entry_b_612e1169e2382.js"]};
        function preload(locale) {
          const urls = preloads[locale] || [];
          for (const url of urls) {
            const link = document.createElement("link");
            link.rel = "modulepreload";
            link.href = url;
            document.head.appendChild(link);
          }
        }
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
          preload(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
      rel="stylesheet"
    />
    <title>Zintl | Vanilla SPA Example</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        let currentLocale = params.get("lang") || "en";
        const l = currentLocale || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"زينتل | مثال تطبيق الصفحة الواحدة"},"es":{"title":"Zintl | Ejemplo de SPA Vanilla"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/src/components/Header.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_612e1169e238 from "virtual:zintl/manager/none/entry:b_612e1169e238";
// import { zintl } from "zintl/macro";

export async function Header(currentLocale: string) {
  // Establishing an independent anchor for the header
  // await zintl(currentLocale);

  const container = document.createElement("header");
  container.className = "app-header";

  container.innerHTML = \`
    <nav class="navbar">
      <div class="nav-brand">
        <span class="brand-text">\${_t("dedf795b", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_e7c8b4f1ad96" })}</span>
      </div>
      <div class="nav-links">
        <a href="/" class="nav-link">\${_t("70f8bb9a", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_e7c8b4f1ad96" })}</a>
        <a href="/about" class="nav-link">\${_t("6b21fb79", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_e7c8b4f1ad96" })}</a>
      </div>
      <!-- @zintl-ignore -->
      <div class="locale-switcher">
        <button data-locale="en" class="lang-btn \${currentLocale === "en" ? "active" : ""}">English</button>
        <button data-locale="ar" class="lang-btn \${currentLocale === "ar" ? "active" : ""}">العربية</button>
        <button data-locale="es" class="lang-btn \${currentLocale === "es" ? "active" : ""}">Español</button>
      </div>
    </nav>
  \`;

  // Use event delegation for locale switching
  container.addEventListener("click", (e) => {
    const target = e.target as HTMLElement;
    if (target.classList.contains("lang-btn")) {
      const locale = target.dataset.locale;
      if (locale) {
        window.dispatchEvent(new CustomEvent("locale-change", { detail: locale }));
      }
    }

    if (target.classList.contains("nav-link")) {
      e.preventDefault();
      const path = target.getAttribute("href");
      if (path) {
        window.dispatchEvent(new CustomEvent("navigate", { detail: path }));
      }
    }
  });

  return container;
}"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/src/main.ts 1`] = `
"import { loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_612e1169e238 from "virtual:zintl/manager/none/entry:b_612e1169e238";
import "./style.css";
import { Router } from "./router";
import { Header } from "./components/Header";
import { Home } from "./pages/Home";


async function initApp() {
  const params = new URLSearchParams(window.location.search);
  let currentLocale = params.get("lang") || "en";
  // await zintl(currentLocale);

  const appRoot = document.querySelector<HTMLDivElement>("#app")!;
  const headerContainer = document.createElement("div");
  const contentContainer = document.createElement("main");

  appRoot.innerHTML = "";
  appRoot.appendChild(headerContainer);
  appRoot.appendChild(contentContainer);

  const router = new Router(contentContainer);

  const updateApp = async (locale: string) => {
    currentLocale = locale;

    // Hydrate the app with the new locale's translations
    await (globalThis.__zintl_inst = loadI18nInstance({ locale: currentLocale, loaders: { ["b_612e1169e238"]: _zintl_mgr_b_612e1169e238.loader, ["b_41f76352d384"]: _zintl_mgr_b_612e1169e238.loader } }));

    // Update Header
    headerContainer.innerHTML = "";
    headerContainer.appendChild(await Header(currentLocale));

    // Update Router
    void router.init();
  };

  router.addRoute("/", () => Home());
  router.addRoute("/about", async () => {
    const { About } = await import("./pages/About");
    return About();
  });

  // Global listeners
  window.addEventListener("locale-change", (e: any) => {
    const newLocale = e.detail;
    const url = new URL(window.location.href);
    url.searchParams.set("lang", newLocale);
    window.history.pushState({}, "", url);
    void updateApp(newLocale);
  });

  window.addEventListener("navigate", (e: any) => {
    void router.navigate(e.detail);
  });

  window.addEventListener("popstate", () => {
    const params = new URLSearchParams(window.location.search);
    const newLocale = params.get("lang") || "en";
    if (newLocale !== currentLocale) {
      void updateApp(newLocale);
    }
  });

  // Initial render
  await updateApp(currentLocale);
}

void initApp();"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/src/pages/About.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_612e1169e238 from "virtual:zintl/manager/none/entry:b_612e1169e238";
export function About() {
  const container = document.createElement("div");
  container.className = "page about-page";

  container.innerHTML = \`
    <section class="about-content">
      <h2 class="section-title">\${_t("0c4eede9", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_41f76352d384" })}</h2>
      <p>
        \${_t("cdc3f7c6", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_41f76352d384" })}
      </p>
      
      <div class="mission-statement">
        <blockquote>
          \${_t("cab0f0a8", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_41f76352d384" })}
        </blockquote>
      </div>

      <div class="team-section">
        <h3>\${_t("20a173f4", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_41f76352d384" })}</h3>
        <p>
          \${_t("c8ba9e8e", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_41f76352d384" })}
        </p>
      </div>
    </section>
  \`;

  return container;
}"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/src/pages/Home.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_612e1169e238 from "virtual:zintl/manager/none/entry:b_612e1169e238";
// import { zintl } from "zintl/macro";
import heroImg from "../assets/hero.png";

export async function Home() {
  // Independent anchor for the Home page
  // await zintl(currentLocale);

  const container = document.createElement("div");
  container.className = "page home-page";

  container.innerHTML = \`
    <section class="hero">
      <div class="hero-content">
        <h1 class="hero-title">\${_t("da2c5899", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</h1>
        <p class="hero-subtitle">
          \${_t("d77d2ed7", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}
        </p>
        <div class="hero-cta">
          <button class="btn btn-primary">\${_t("bd2cb051", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</button>
          <button class="btn btn-secondary">\${_t("378cbbf5", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</button>
        </div>
      </div>
      <div class="hero-visual">
        <img src="\${heroImg}" alt="Zintl Visualization" class="hero-image" />
      </div>
    </section>

    <section class="features">
      <div class="feature-card">
        <!-- @zintl-note This is a note for Zero Config -->
        <h3>\${_t("29eaa4f9", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</h3>
        <!-- @zintl-pass x=1 -->
        <p>\${_t("e8d55846", { x: 1 }, { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</p>
      </div>
      <div class="feature-card">
        <h3>\${_t("eb4a6c12", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</h3>
        <p>\${_t("7548843e", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</p>
      </div>
      <div class="feature-card">
        <h3>\${_t("5e115f01", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</h3>
        <p>\${_t("0ff9c8a8", { _mgr: _zintl_mgr_b_612e1169e238, _bId: "b_16245bf9a205" })}</p>
      </div>
    </section>
  \`;

  return container;
}"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/src/router.ts 1`] = `
"type Route = {
  path: string;
  component: () => string | HTMLElement | Promise<string | HTMLElement>;
};

export class Router {
  private routes: Route[] = [];
  private rootElement: HTMLElement;

  constructor(rootElement: HTMLElement) {
    this.rootElement = rootElement;
    window.addEventListener("popstate", () => this.handleRoute());
  }

  addRoute(path: string, component: () => string | HTMLElement | Promise<string | HTMLElement>) {
    this.routes.push({ path, component });
  }

  async navigate(path: string) {
    const url = new URL(path, window.location.origin);
    const currentParams = new URLSearchParams(window.location.search);
    const lang = currentParams.get("lang");

    if (lang && !url.searchParams.has("lang")) {
      url.searchParams.set("lang", lang);
    }

    window.history.pushState({}, "", url.pathname + url.search + url.hash);
    await this.handleRoute();
  }

  private async handleRoute() {
    const path = window.location.pathname;
    const route = this.routes.find((r) => r.path === path) || this.routes[0];
    if (route) {
      const content = await route.component();
      if (typeof content === "string") {
        this.rootElement.innerHTML = content;
      } else {
        this.rootElement.innerHTML = "";
        this.rootElement.appendChild(content);
      }
    }
  }

  async init() {
    await this.handleRoute();
  }
}"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/virtual:zintl/content/ar/entry:b_612e1169e238 1`] = `
"export default {
    "b_e7c8b4f1ad96": {
      "dedf795b": "زينتل",
      "70f8bb9a": "الرئيسية",
      "6b21fb79": "من نحن",
    },
    "b_16245bf9a205": {
      "da2c5899": "تدويل قوي للتطبيقات الحديثة",
      "d77d2ed7": "يقوم زينتل بتحويل سلاسل النصوص الثابتة إلى كتالوجات ترجمة محسنة وواعية بالقطع.\\n          استمتع بمستقبل التدويل اليوم!",
      "bd2cb051": "ابدأ الآن",
      "378cbbf5": "تعلم المزيد",
      "29eaa4f9": "بدون إعدادات",
      "e8d55846": "فقط قم باستدعاء zintl() واترك المترجم يقوم بالباقي من أجلك.",
      "eb4a6c12": "آمن من حيث الأنواع",
      "7548843e": "استمتع بدعم TypeScript الكامل مع مخططات ترجمة منشأة تلقائياً.",
      "5e115f01": "محسن",
      "0ff9c8a8": "قم بتحميل ما تحتاجه فقط، عند الحاجة إليه. أصغر أثر في الذاكرة في هذا المجال.",
    },
    "b_41f76352d384": {
      "0c4eede9": "عن زينتل",
      "cdc3f7c6": "وُلِد زينتل من الحاجة إلى طريقة أكثر صداقة للمطورين للتعامل مع الترجمات في تطبيقات الويب المعقدة.\\n        غالبًا ما تتطلب أنظمة التدويل التقليدية إدارة يدوية لملفات JSON وأكواد نمطية معقدة.",
      "cab0f0a8": "\\"مهمتنا هي جعل التدويل سلسًا مثل كتابة كود واجهة المستخدم الخاصة بك.\\"",
      "20a173f4": "الفلسفة",
      "c8ba9e8e": "نحن نؤمن بأن المترجم يجب أن يكون أفضل صديق لك. من خلال تحليل كود المصدر الخاص بك،\\n          يمكن لـ زينتل أتمتة استخراج وربط وتحسين ترجماتك،\\n          مما يترك لك الحرية للتركيز على بناء تجارب مستخدم مذهلة.",
    },
  };"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/virtual:zintl/content/es/entry:b_612e1169e238 1`] = `
"export default {
    "b_e7c8b4f1ad96": {
      "dedf795b": "Zintl",
      "70f8bb9a": "Inicio",
      "6b21fb79": "Sobre nosotros",
    },
    "b_16245bf9a205": {
      "da2c5899": "I18n potente para aplicaciones modernas",
      "d77d2ed7": "Zintl transforma sus cadenas estáticas en catálogos de traducción optimizados y conscientes de los fragmentos.\\n          ¡Experimente el futuro de la internacionalización hoy mismo!",
      "bd2cb051": "Empezar",
      "378cbbf5": "Saber más",
      "29eaa4f9": "Cero configuración",
      "e8d55846": "Solo llame a zintl() y deje que el compilador haga el resto del trabajo pesado por usted.",
      "eb4a6c12": "Seguridad de tipos",
      "7548843e": "Disfrute de soporte completo de TypeScript con esquemas de traducción generados automáticamente.",
      "5e115f01": "Optimizado",
      "0ff9c8a8": "Cargue solo lo que necesite, cuando lo necesite. La huella de tiempo de ejecución más pequeña de la industria.",
    },
    "b_41f76352d384": {
      "0c4eede9": "Sobre Zintl",
      "cdc3f7c6": "Zintl nació de la necesidad de una forma más amigable para el desarrollador de manejar traducciones en aplicaciones web complejas.\\n        Los sistemas i18n tradicionales a menudo requieren la gestión manual de archivos JSON y código repetitivo complejo.",
      "cab0f0a8": "\\"Nuestra misión es hacer que la internacionalización sea tan fluida como escribir el código de su interfaz de usuario.\\"",
      "20a173f4": "La filosofía",
      "c8ba9e8e": "Creemos que el compilador debe ser su mejor amigo. Al analizar su código fuente,\\n          Zintl puede automatizar la extracción, el cosido y la optimización de sus traducciones,\\n          dejándole libre para centrarse en crear experiencias de usuario increíbles.",
    },
  };"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/virtual:zintl/manager/none/entry:b_612e1169e238 1`] = `
"export default { id: "b_612e1169e238", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_e7c8b4f1ad96": {
      "dedf795b": "Zintl",
      "70f8bb9a": "Home",
      "6b21fb79": "About",
    },
    "b_16245bf9a205": {
      "da2c5899": "Powerful I18n for Modern Apps",
      "d77d2ed7": "Zintl transforms your static strings into optimized, chunk-aware translation catalogs.\\n          Experience the future of internationalization today!",
      "bd2cb051": "Get Started",
      "378cbbf5": "Learn More",
      "29eaa4f9": "Zero Config",
      "e8d55846": "Just call zintl() and let the compiler do the rest of the heavy lifting for you.",
      "eb4a6c12": "Type Safe",
      "7548843e": "Enjoy full TypeScript support with automatically generated translation schemas.",
      "5e115f01": "Optimized",
      "0ff9c8a8": "Only load what you need, when you need it. Smallest runtime footprint in the industry.",
    },
    "b_41f76352d384": {
      "0c4eede9": "About Zintl",
      "cdc3f7c6": "Zintl was born out of a need for a more developer-friendly way to handle translations in complex web applications. \\n        Traditional i18n systems often require manual management of JSON files and complex boilerplate code.",
      "cab0f0a8": "\\"Our mission is to make internationalization as seamless as writing your UI code.\\"",
      "20a173f4": "The Philosophy",
      "c8ba9e8e": "We believe that the compiler should be your best friend. By analyzing your source code, \\n          Zintl can automate the extraction, stitching, and optimization of your translations, \\n          leaving you free to focus on building amazing user experiences.",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_612e1169e238").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_612e1169e238").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vanilla-spa > should match Production snapshots (Baking/Handshake) > vanilla-spa/prod-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	const message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) {
		if (mgr) {
			instance.registerLoader(mgr.id, mgr.loader);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;
